k8s/static-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-server
  labels:
    app: static-server
spec:
  selector:
    matchLabels:
      app: static-server
  template:
    metadata:
      labels:
        app: static-server
    spec:
      containers:
        - name: static-server
          image: nginx:1.24.0
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              name: nginx-conf
            - mountPath: /var/www/static/archives
              name: archives-data
      volumes:
        - name: nginx-conf
          configMap:
            name: static-server-nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: archives-data
          persistentVolumeClaim:
            claimName: archives-volume-claim
