k8s/static-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: static-server
